Add basic layout

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
 <meta charset="UTF-8">
 <title>Title of the document</title>
-<script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
 </head>
 
 <body>
+
   <div id="content">
+    <h1>Julia's Pasta Palace</h1>
+    <img src="images/pasta.jpeg" alt="pasta">
+    <p>Julia loves Pasta and you will love her Pasta too! Come eat at the Pasta Palace today!</p>
   </div>
 </body>
 
