Add elements with JS

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
 
   <div id="content">
-    <h1>Julia's Pasta Palace</h1>
+    <!-- <h1>Julia's Pasta Palace</h1>
     <img src="images/pasta.jpeg" alt="pasta">
-    <p>Julia loves Pasta and you will love her Pasta too! Come eat at the Pasta Palace today!</p>
+    <p>Julia loves Pasta and you will love her Pasta too! Come eat at the Pasta Palace today!</p> -->
   </div>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
