Add JS tab elements

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
 <meta charset="UTF-8">
 <title>Title of the document</title>
+<link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-
+  <ul id = "tab">
+        <li id="home">Home</li>
+        <li id="menu">Menu</li>
+        <li id="contact">Contact</li>
+  </ul>
   <div id="content">
-    <!-- <h1>Julia's Pasta Palace</h1>
-    <img src="images/pasta.jpeg" alt="pasta">
-    <p>Julia loves Pasta and you will love her Pasta too! Come eat at the Pasta Palace today!</p> -->
   </div>
   <script src="js/script.js"></script>
 </body>
