--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
   <ul id = "tab">
-        <li id="home">Home</li>
-        <li id="menu">Menu</li>
-        <li id="contact">Contact</li>
+    <li><a href='#home' class = 'active'>Home</a></li>
+    <li><a href="#menu">Menu</a></li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
   <div id="content">
   </div>
