--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <meta charset="UTF-8">
 <title>Restaurant</title>
-<link href="css/style.css" rel="stylesheet" type="text/css" />
+<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -15,7 +15,7 @@
   </ul>
   <div id="content">
   </div>
-  <script src="js/script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
